--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.min.js" type="text/javascript"></script>
     <script src="dist/bundle.js"></script>
-    <style>
-      .maze-tile {
-        float: left;
-        padding: 5px 15px;
-      }
-    </style>
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
   </head>
   <body>
     <h1>Mazes</h1>
