Aldous-Broder 알고리즘 구현.

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
       <h2>Sidewinder</h2>
       <canvas id="canvas-sidewinder"></canvas>
     </div>
+    <div class="maze-tile">
+      <h2>Aldous-Broder</h2>
+      <canvas id="canvas-aldous-broder"></canvas>
+    </div>
   </body>
 </html>
