마크업 변경.

--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
       <h2>Aldous-Broder</h2>
       <canvas id="canvas-aldous-broder"></canvas>
     </div>
+    <div class="maze-tile">
+      <h2>Wilson's</h2>
+      <canvas id="canvas-wilsons"></canvas>
+    </div>
   </body>
 </html>
