--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.min.js" type="text/javascript"></script>
+    <!-- <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.min.js" type="text/javascript"></script> -->
     <script src="dist/bundle.js"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
   </head>
