recursiveBacktracker 알고리즘 추가.

--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
       <h2>Wilson's</h2>
       <canvas id="canvas-wilsons"></canvas>
     </div>
+    <div class="maze-tile">
+      <h2>Recursive Backtracker</h2>
+      <canvas id="canvas-recursive-backtracker"></canvas>
+    </div>
   </body>
 </html>
