코드 정리 * 미로 생성 반복 코드 제거 * elementId 대신 canvas 객체를 직접 넘기도록 수정 * 알고리즘 이름과 canvas elementId가 대응되도록 수정

--- a/index.html
+++ b/index.html
@@ -10,23 +10,19 @@
     <h1>Mazes</h1>
     <div class="maze-tile">
       <h2>Binary Tree</h2>
-      <canvas id="canvas-binary-tree"></canvas>
+      <canvas id="binaryTree"></canvas>
     </div>
     <div class="maze-tile">
       <h2>Sidewinder</h2>
-      <canvas id="canvas-sidewinder"></canvas>
+      <canvas id="sidewinder"></canvas>
     </div>
     <div class="maze-tile">
       <h2>Aldous-Broder</h2>
-      <canvas id="canvas-aldous-broder"></canvas>
-    </div>
-    <div class="maze-tile">
-      <h2>Wilson's</h2>
-      <canvas id="canvas-wilsons"></canvas>
+      <canvas id="aldousBroder"></canvas>
     </div>
     <div class="maze-tile">
       <h2>Recursive Backtracker</h2>
-      <canvas id="canvas-recursive-backtracker"></canvas>
+      <canvas id="recursiveBacktracker"></canvas>
     </div>
   </body>
 </html>
