Wilson's 알고리즘 추가.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       <canvas id="aldousBroder"></canvas>
     </div>
     <div class="maze-tile">
+      <h2>Wilson's</h2>
+      <canvas id="wilsons"></canvas>
+    </div>
+    <div class="maze-tile">
       <h2>Recursive Backtracker</h2>
       <canvas id="recursiveBacktracker"></canvas>
     </div>
