Hunt-and-kill 알고리즘 추가.

--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
       <h2>Recursive Backtracker</h2>
       <canvas id="recursiveBacktracker"></canvas>
     </div>
+    <div class="maze-tile">
+      <h2>Hunt and Kill</h2>
+      <canvas id="huntAndKill"></canvas>
+    </div>
   </body>
 </html>
