Change class name from maze-title to maze-box

--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
   <body>
     <main class="container">
       <h1>Mazes</h1>
-      <div class="maze-tile">
+      <div class="maze-box">
         <h2>Binary Tree</h2>
         <canvas id="binaryTree"></canvas>
       </div>
-      <div class="maze-tile">
+      <div class="maze-box">
         <h2>Sidewinder</h2>
         <canvas id="sidewinder"></canvas>
       </div>
-      <div class="maze-tile">
+      <div class="maze-box">
         <h2>Aldous-Broder</h2>
         <canvas id="aldousBroder"></canvas>
       </div>
-      <div class="maze-tile">
+      <div class="maze-box">
         <h2>Wilson's</h2>
         <canvas id="wilsons"></canvas>
       </div>
-      <div class="maze-tile">
+      <div class="maze-box">
         <h2>Recursive Backtracker</h2>
         <canvas id="recursiveBacktracker"></canvas>
       </div>
-      <div class="maze-tile">
+      <div class="maze-box">
         <h2>Hunt and Kill</h2>
         <canvas id="huntAndKill"></canvas>
       </div>
