Add type=module to script tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="js/maze.js"></script>
+    <script src="js/maze.js" type="module"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
   </head>
   <body>
